--- a/chaoszone.cabal
+++ b/chaoszone.cabal
@@ -3,7 +3,7 @@
 
 name:                chaoszone
 version:             0.0.0.0
--- synopsis:            
+synopsis:            build files for the chaoszone.cz website
 -- description:         
 homepage:            https://chaoszone.cz
 license:             PublicDomain
