--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,7 @@
-dist/
-dist-newstyle/
-cabal-dev
-*.o
-*.hi
-*.chi
-*.chs.h
-*.dyn_o
-*.dyn_hi
-.hpc
-.hsenv
-.cabal-sandbox/
-cabal.sandbox.config
-*.prof
-*.aux
-*.hp
-.stack-work/
-_cache/
-_site/
-drafts/
-.envrc
+public/
+resources/
+deploy
+.hugo_build.lock
 .direnv/
+.envrc
+*.swp
